# tauri-terminal

./: .dockerignore  .prettierignore  Dockerfile  TODO.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: tauri-build.yml
docs/: architecture.md  conf_spec.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  lib.rs
src-tauri/src/cmd/: connections.rs  mod.rs  sessions.rs  settings.rs  sync.rs  terminal.rs
src-tauri/src/domain/: models.rs
src-tauri/src/domain/services/: connection_service.rs  mod.rs  session_service.rs  sync_service.rs
src-tauri/src/infra/: mod.rs
src-tauri/src/infra/crypto/: mod.rs
src-tauri/src/infra/db/: in_memory.rs  mod.rs  sqlite.rs
src-tauri/src/infra/keychain/: mod.rs
src-tauri/src/infra/session/: mod.rs
src-tauri/src/infra/storage/: local.rs  mod.rs
src/app/: theme.ts
src/app/layout/: AppLayout.module.css  AppLayout.tsx
src/app/providers/: AppProviders.tsx
src/features/connections/components/: ConnectionFormModal.tsx
src/features/connections/hooks/: useConnectionsQuery.ts
src/features/sessions/components/: ConnectionPasswordModal.tsx
src/features/sessions/hooks/: useSessionsQuery.ts
src/features/sync/components/: ExportConfModal.tsx  ImportConfModal.tsx
src/pages/: HomePage.tsx  WorkspacePage.tsx
src/services/: connections.ts  sessions.ts  sync.ts  tauriBridge.ts  terminal.ts
src/shared/types/: index.ts
src/store/: connectionSecretsStore.ts  connectionsStore.ts  sessionsStore.ts
src/styles/: global.css
(+1 files in other folders)
